--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@
 }
 .list {
   list-style: none;
+  display: flex;
 }
 .nav-elements {
   font-weight: 500;
@@ -885,6 +886,7 @@
   display: flex;
   gap: 24px;
 }
+
 @media screen and (max-width: 428px) {
   .body-section {
     overflow-x: hidden;
@@ -921,12 +923,11 @@
     display: flex;
     text-align: center;
 
-    /* Header 2 */
     font-family: Roboto;
     font-size: 36px;
     font-style: normal;
     font-weight: 700;
-    line-height: 40px; /* 111.111% */
+    line-height: 40px;
     letter-spacing: 0.72px;
     text-transform: capitalize;
     color: var(--navy-blue-color);
@@ -938,12 +939,12 @@
     display: flex;
     align-self: stretch;
     color: var(--slate-color);
-    /* Body Medium */
+
     font-family: Roboto;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
-    line-height: 24px; /* 150% */
+    line-height: 24px;
     letter-spacing: 0.32px;
     padding: 0 16px;
     width: 396px;
@@ -963,6 +964,6 @@
   .mobile-screen {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
   }
+ 
 }
