--- a/css/style.css
+++ b/css/style.css
@@ -1090,14 +1090,23 @@
     overflow: hidden;
   }
   .charm_menu-hamburger {
-    visibility: visible;
+    display: inline-flex;
+    flex-direction: column;
+    position: relative;
+    width: 32px;
+    height: 22px;
+    justify-content: center;
+    gap: 10px;
   }
-}
 
-@media screen and (max-width: 1158px) {
-  .customers-list {
-    flex-wrap: wrap;
-    row-gap: 72px;
-    column-gap: 24px;
+  .lines {
+    width: 100%;
+    background-color: #2e2f42;
+    border-radius: 4px;
+    border: 2px solid #2e2f42;
   }
+  .header-div {
+    align-items: center;
+  }
+  .charm_menu-hamburger: checked;
 }
