--- a/css/style.css
+++ b/css/style.css
@@ -1108,5 +1108,15 @@
   .header-div {
     align-items: center;
   }
-  .charm_menu-hamburger: checked;
+  .modal-window-mobile-menu {
+    width: 396px;
+    height: 796px;
+    background: var(--white-color);
+    box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+      0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+      0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+  }
+  .charm_menu-hamburger:checked + .modal-window-mobile-menu {
+    visibility: visibile;
+  }
 }
