--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,7 @@
   font-family: var(--font-family);
   color: var(--slate-color);
 }
-/*possible not found in index or portfolio
-.h-two {
-  margin: 0;
-}*/
+
 .psm {
   margin: 0;
 }
@@ -33,13 +30,7 @@
   text-transform: uppercase;
   color: var(--iris-color);
 }
-/*possible not used
-.nav-li {
-  margin-right: 40px;
-}
-.nav-li-o {
-  margin-right: 0;
-}*/
+
 .link {
   text-decoration: none;
 }
@@ -73,6 +64,7 @@
   line-height: 24px; /* 150% */
   letter-spacing: 0.32px;
   list-style: none;
+  display: none;
 }
 .adress-color {
   color: var(--slate-color);
@@ -108,13 +100,13 @@
   letter-spacing: 0.64px;
   cursor: pointer;
   font-family: "Roboto", sans-serif;
-  padding: 16px 32px;
+  /* padding: 16px 32px; */
   border-radius: 4px;
   display: block;
   align-items: flex-start;
   gap: 10px;
   min-width: 169px;
-  height: 56px;
+  /* height: 56px; */
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -154,16 +146,15 @@
 .paragraph-port-cards:focus {
   transform: translateY(0%);
 }
-
 .section-five-title {
-  margin-bottom: 72px;
+  /*   margin-bottom: 72px;*/
 }
 
 .section-c {
   font-size: 36px;
   line-height: 1.11;
   color: var(--navy-blue-color);
-  margin-bottom: 72px;
+  /* margin-bottom: 72px; */
   letter-spacing: 0.02em;
   text-transform: capitalize;
   text-align: center;
@@ -180,7 +171,7 @@
 }
 .footer-p {
   max-width: 264px;
-  margin-bottom: 16px;
+  /* margin-bottom: 16px; */
   line-height: 1.5;
   color: var(--cloud-color);
   letter-spacing: 0.02em;
@@ -223,24 +214,24 @@
   justify-content: space-between;
 }
 .container {
-  width: 1158px;
+  max-width: 1158px;
   margin: 0 auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  /* padding-left: 15px;
+  padding-right: 15px; */
 }
 .nav-hwiii {
   display: flex;
   align-items: center;
 }
 .logo-hwiii {
-  margin-right: 76px;
+  /*  margin-right: 76px; */
 }
 .nav-menu {
-  display: flex;
+  display: none;
   gap: 40px;
 }
 .studio-link {
-  padding-top: 24px;
+  /* padding-top: 24px; */
   padding-bottom: 24px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -249,18 +240,18 @@
   gap: 40px;
 }
 .first-section {
-  width: 1158px;
+  max-width: 1158px;
   margin: 0 auto;
-  padding: 0 15px;
+  /* padding: 0 15px; */
 }
 .prime-section {
-  padding: 188px 0;
+  /* padding: 188px 0; */
   max-height: 600px;
   margin: auto;
 }
 
 .s-section {
-  padding: 120px 0;
+  /* padding: 120px 0; */
 }
 .visually-hidden {
   position: absolute;
@@ -278,12 +269,12 @@
 .s-section-list {
   gap: 24px;
 }
-.s-section-li {
-  margin-right: 24px;
+/* .s-section-li {
+ margin-right: 24px;
 }
 .last-section-li {
-  margin-right: 0;
-}
+   margin-right: 0; 
+} */
 .shadow-section-iv {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -291,13 +282,13 @@
 .strategy-space {
   width: 100%;
   min-width: 264px;
-  margin-bottom: 8px;
+  /* margin-bottom: 8px; */
 }
 .section-iii {
-  padding-bottom: 120px;
+  /* padding-bottom: 120px; */
 }
 .customers-title {
-  margin-bottom: 72px;
+  /* margin-bottom: 72px; */
 }
 .section-iii-img {
   flex-basis: calc((100% - 48px) / 3);
@@ -308,7 +299,7 @@
 }
 
 .section-iv {
-  padding: 120px 0;
+  /* padding: 120px 0; */
 }
 .section-iv-title {
   margin-bottom: 72px;
@@ -318,40 +309,40 @@
   border-radius: 0px 0px 4px 4px;
 }
 .professional {
-  padding: 32px 0;
+  /* padding: 32px 0; */
   text-align: center;
 }
 .section-iv-name {
   text-align: center;
-  margin-bottom: 8px;
+  /* margin-bottom: 8px; */
 }
 .second-class {
-  padding: 0;
-  margin: 0;
+  /* padding: 0; */
+  /* margin: 0; */
   text-align: center;
 }
 .final-part {
-  padding: 100px 0;
+  /* padding: 100px 0; */
 }
 .footer-logo {
   display: inline-block;
-  margin-bottom: 16px;
+  /* margin-bottom: 16px; */
 }
 .footer-p-position {
   max-width: 264px;
-  margin-bottom: 16px;
+  /* margin-bottom: 16px; */
 }
 .main-class {
-  padding-top: 96px;
-  padding-bottom: 120px;
+  /* padding-top: 96px;
+  padding-bottom: 120px;*/
 }
 .port-button-list {
   justify-content: center;
   gap: 24px;
-  margin-bottom: 72px;
+  /* margin-bottom: 72px; */
 }
 .port-btn {
-  padding: 12px 24px;
+  /* padding: 12px 24px; */
   border: 1px solid #e7e9fc;
   border-radius: 4px;
 }
@@ -369,15 +360,15 @@
   width: calc((100% - 48px) / 3);
 }
 .div-app-interface {
-  padding: 32px 16px;
+  /* padding: 32px 16px; */
   border: 1px solid #e7e9fc;
   border-top: none;
 }
 .aaa {
-  margin-bottom: 8px;
+  /* margin-bottom: 8px; */
 }
 .bbb {
-  margin-left: 0;
+  /* margin-left: 0; */
 }
 .ccc {
   display: flex;
@@ -387,7 +378,7 @@
 }
 
 .ul-potf {
-  padding: 0;
+  /* padding: 0; */
 }
 
 .title-people-img {
@@ -411,7 +402,7 @@
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
   color: var(--light-color);
-  margin-bottom: 16px;
+  /* margin-bottom: 16px; */
   font-family: Roboto;
   font-style: normal;
 }
@@ -423,8 +414,8 @@
   display: inline-flex;
   align-items: flex-start;
   gap: 16px;
-  width: 208px;
-  height: 40px;
+  /* width: 208px;
+  height: 40px; */
 }
 
 .customers-icons {
@@ -437,13 +428,13 @@
   align-items: center;
 }
 .customers-section {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  /* padding-top: 120px;
+  padding-bottom: 120px; */
 }
 .customers-list {
   gap: 24px;
   display: flex;
-  padding: 0;
+  /* padding: 0; */
 }
 .company-a {
   fill: currentColor;
@@ -458,7 +449,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 8px;
+  /* margin-bottom: 8px; */
 }
 
 .svg-social-media-links {
@@ -508,7 +499,7 @@
 }
 .social-media-team {
   margin-top: 8px;
-  padding: 0;
+  /* padding: 0; */
   display: flex;
   justify-content: center;
   gap: 24px;
@@ -533,9 +524,9 @@
 }
 .card-content {
   margin: 0 auto;
-  padding: 32px 0;
+  /* padding: 32px 0; */
   display: flex;
-  width: 232px;
+  /* width: 232px; */
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -543,7 +534,7 @@
 }
 .customers-list-li {
   width: calc((100% - 120px) / 6);
-  height: 88px;
+  /* height: 88px;*/
 }
 .customers-link {
   width: 100%;
@@ -566,12 +557,12 @@
   color: #404bbf;
 }
 .social-media-svg {
-  padding-left: 0px;
+  /* padding-left: 0px; */
 }
 .section-one-hero {
   display: flex;
-  width: 1158px;
-  padding: 0 15px;
+  max-width: 1158px;
+  /* padding: 0 15px; */
 }
 /*aici incepe tema 5*/
 .studio-style {
@@ -646,7 +637,6 @@
 .close-button:focus .svg-close-button {
   fill: #ffffff;
 }
-
 .modal-window-container {
   position: fixed;
   top: 0;
@@ -886,4 +876,18 @@
 
 .modal-mobile {
   visibility: hidden;
+}
+@media and (min-width=768px) {
+  .nav-menu {
+    display: flex;
+  }
+  .adress {
+    font-family: "Roboto";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+    letter-spacing: 0.32px;
+    list-style: none;
+  }
 }
