--- a/css/style.css
+++ b/css/style.css
@@ -195,10 +195,7 @@
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
-.header-div {
-  display: flex;
-  justify-content: space-between;
-}
+
 .container {
   max-width: 1158px;
   margin: 0 auto;
@@ -614,24 +611,7 @@
   margin: 0;
 }
 
-.fotter-subscribtion-button {
-  min-width: 165px;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: #ffffff;
-  cursor: pointer;
-  background-color: #4d5ae5;
-  border: none;
-  border-radius: 4px;
-}
-.send-email-svg {
+.d-email-svg {
   margin-left: 16px;
 }
 .modal-form-paragraph {
@@ -776,9 +756,10 @@
 .modal-mobile {
   visibility: hidden;
 }
-.mobile-screen {
-  display: flex;
-  flex-direction: column;
+@media and (width>=1158px) {
+  .section-two {
+    display: flex;
+  }
 }
 
 @media screen and (min-width: 769px) and (max-width: 1158px) {
@@ -810,7 +791,7 @@
     display: flex;
   }
   .mobile-screen {
-    flex-direction: row;
+    display: flex;
   }
   .s-section-list {
     gap: 24px;
@@ -891,6 +872,27 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     color: #ffffff;
+  }
+  .fotter-subscribtion-button {
+    min-width: 165px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: #4d5ae5;
+    border: none;
+    border-radius: 4px;
+  }
+  .header-div {
+    display: flex;
+    justify-content: space-between;
   }
 }
 @media screen and (min-width: 429px) and (max-width: 768px) {
@@ -977,6 +979,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-left: 16px;
 }
 .section-iii {
   /* padding-bottom: 120px;  */
@@ -984,6 +987,8 @@
 }
 
 .mobile-screen {
+  display: flex;
+  flex-direction: column;
   text-align: center;
 }
 .section-d {
@@ -1104,4 +1109,28 @@
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   color: #ffffff;
+  margin-bottom: 16px;
+}
+.fotter-subscribtion-button {
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4d5ae5;
+  border: none;
+  border-radius: 4px;
+  margin-left: 120px;
+}
+.header-div {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 15px 20px;
 }
