--- a/css/style.css
+++ b/css/style.css
@@ -41,20 +41,6 @@
   list-style: none;
   display: flex;
 }
-.nav-elements {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--navy-blue-color);
-}
-.nav-elements:hover,
-.nav-elements:focus {
-  color: #404bbf;
-}
-.nav-link:focus {
-  color: #404bbf;
-}
 
 .adress {
   font-family: "Roboto";
@@ -65,14 +51,6 @@
   letter-spacing: 0.32px;
   list-style: none;
   display: none;
-}
-.adress-color {
-  color: var(--slate-color);
-}
-
-.adress-color:hover,
-.adress-color:focus {
-  color: var(--ocean-color);
 }
 
 .header-section {
@@ -173,22 +151,12 @@
   display: flex;
   align-items: center;
 }
-.logo-hwiii {
-  /*  margin-right: 76px; */
-}
+
 .nav-menu {
   display: none;
   gap: 40px;
 }
-.studio-link {
-  /* padding-top: 24px; */
-  padding-bottom: 24px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.adress-list {
-  display: flex;
-  gap: 40px;
-}
+
 .first-section {
   max-width: 1158px;
   margin: 0 auto;
@@ -320,7 +288,7 @@
       rgba(46, 47, 66, 0.7)
     ),
     url(../images/people-office.jpg);
-  max-width: 1440px;
+  max-width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -438,28 +406,7 @@
   /* padding: 0 15px; */
 }
 /*aici incepe tema 5*/
-.studio-style {
-  position: relative;
-  color: var(--navy-blue-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.studio-style::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  height: 4px;
-  background-color: #404bbf;
-  border-radius: 2px;
-  width: 100%;
-  visibility: hidden;
-}
-.studio-style:focus::after {
-  visibility: visible;
-}
-.studio-style:hover::after {
-  visibility: visible;
-}
+
 .modal {
   width: 100%;
   height: 100vh;
@@ -665,20 +612,98 @@
   gap: 24px;
 }
 
-@media screen and (min-width: 769px) and (max-width: 1158px) {
+@media screen and (min-width: 1158px) {
+ 
+  .container {
+    min-width: 1158px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
   .adress {
-    display: block;
+    /*ok*/
+    font-family: "Roboto";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+    letter-spacing: 0.32px;
+    list-style: none;
+    display: flex;
   }
   .adress-list {
+    /*ok*/
     display: flex;
+    gap: 40px;
+  }
+  .logo-hwiii {
+    margin-right: 76px; /*ok*/
+  }
+
+  .adress-color {
+    /*ok*/
+    color: var(--slate-color);
+  }
+
+  .adress-color:hover, /*ok*/
+.adress-color:focus {
+    color: var(--ocean-color);
   }
   .header-hwiii {
     border-bottom: 1px solid #e7e9fc;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
       0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
   }
-
+  .studio-style {
+    /*ok*/
+    position: relative;
+    color: var(--navy-blue-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .studio-style::after {
+    /*ok*/
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+    width: 100%;
+    visibility: hidden;
+  }
+  .studio-style:focus::after {
+    /*ok*/
+    visibility: visible;
+  }
+  .studio-style:hover::after {
+    /*ok*/
+    visibility: visible;
+  }
+  .studio-link {
+    /*ok*/
+    padding-top: 24px;
+    padding-bottom: 24px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .nav-elements {
+    /*ok*/
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--navy-blue-color);
+  }
+  .nav-elements:hover, /*ok*/
+.nav-elements:focus {
+    color: #404bbf;
+  }
+  .nav-link:focus {
+    /*ok*/
+    color: #404bbf;
+  }
   .section-two {
+    /*ok*/
     width: 264px;
     height: 112px;
     flex-shrink: 0;
@@ -688,8 +713,8 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 8px;
-    visibility: visible;
   }
+
   .section-iii {
     visibility: visible;
     padding-bottom: 120px;
@@ -697,15 +722,19 @@
   }
 
   .nav-menu {
-    display: flex;
+    display: flex; /*ok*/
+    gap: 40px;
   }
   .mobile-screen {
+    display: flex;
+    flex-direction: unset;
+  }
+  .s-two {
     display: flex;
   }
   .s-section-list {
     gap: 24px;
     display: flex;
-    flex-direction: unset;
   }
   .social-media-team {
     margin-top: 8px;
@@ -848,12 +877,14 @@
     margin-right: 0;
   }
 }
-@media screen and (min-width: 429px) and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+
   .s-section-li {
     width: calc((100% - 24px) / 2);
   }
   .customers-list {
     max-width: 552px;
+    flex-wrap: wrap;
   }
 
   .customers-list-li {
@@ -985,9 +1016,9 @@
 .s-section-list {
   gap: 72px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   padding-left: 16px;
+  flex-wrap: wrap;
 }
 .section-iii {
   /* padding-bottom: 120px;  */
@@ -995,9 +1026,11 @@
 }
 
 .mobile-screen {
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column; */
   text-align: center;
+  flex-wrap: wrap;
+  
 }
 .section-d {
   background-color: #f4f4fd;
@@ -1032,7 +1065,7 @@
 }
 .footer-email-container {
   display: block;
-  width: 398px;
+  width: 100%;
 }
 .header-title {
   color: var(--white-color);
@@ -1234,7 +1267,7 @@
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .container {
-  max-width: 428px;
+ min-width: 428px;
   margin: 0 auto;
   /* padding-left: 15px;
   padding-right: 15px; */
